<resources>
    <string name="app_name">StarEmis</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="teacher">Teacher</string>
    <string name="institution_code">Institution Code</string>
    <string name="login">Login</string>
    <string name="powered_by_star_soft_ltd">Powered by Star Soft Ltd.</string>
    <string name="sign_in">Sign In</string>
    <string name="star_academic_apps">Star Academic Apps</string>
    <string name="dash_board">Dashboard</string>
    <string name="attendance">Attendance</string>
    <string name="year">Year:</string>
    <string name="_2020">2020</string>
    <string name="session">Session:</string>
    <string name="_2018_2019">2018-2019</string>
    <string name="shift">Shift:</string>
    <string name="day">Day</string>
    <string name="class_name">Class:</string>
    <string name="seven">Seven</string>
    <string name="section">Section:</string>
    <string name="a">A</string>
    <string name="load">Load</string>
    <string name="send_sms">Send Sms</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Md.Shafiq</string>
    <string name="nav_header_subtitle">shafiq.webbd@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="result_activity">Result Activity</string>
</resources>
