<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".AttendanceActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#472cf5"
        android:theme="@style/ToolBarTheme"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <TextView
            android:id="@+id/toolbar_title_text_viewID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingEnd="53dp"
            android:paddingStart="0dp"
            android:text="@string/attendance"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/yearLayoutID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarID"
        android:background="#9ec4fc"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/yearTextViewID1"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingEnd="0dp"
            android:paddingStart="5dp"
            android:text="@string/year"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/yearTextViewID2"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:text="@string/_2020"
            android:textAlignment="textStart"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/sessionTextViewID1"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="21dp"
            android:text="@string/session"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sessionTextViewID2"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:text="@string/_2018_2019"
            android:textAlignment="textStart"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/shiftLayoutID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/yearLayoutID"
        android:background="#9ec4fc"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/shiftTextViewID1"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingEnd="0dp"
            android:paddingStart="5dp"
            android:text="@string/shift"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/shiftTextViewID2"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:text="@string/day"
            android:textAlignment="textStart"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/classTextViewID1"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="29dp"
            android:text="@string/class_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/classTextViewID2"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:text="@string/seven"
            android:textAlignment="textStart"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sectionLayoutID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shiftLayoutID"
        android:background="#9ec4fc"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sectionTextViewID1"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingEnd="0dp"
            android:paddingStart="5dp"
            android:text="@string/section"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sectionTextViewID2"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:text="@string/a"
            android:textAlignment="textStart"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayoutID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sectionLayoutID"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/loadButtonID"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="1dp"
            android:text="@string/load"
            android:textAllCaps="false"
            android:textColor="#2e58ff"
            android:textSize="22sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/sendSmsButtonID"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="1dp"
            android:text="@string/send_sms"
            android:textAllCaps="false"
            android:textColor="#2e58ff"
            android:textSize="22sp" />

    </LinearLayout>

    <View
        android:id="@+id/viewID"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/buttonLayoutID"
        android:background="#0622f2" />

    <ProgressBar
        android:id="@+id/pBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewID"
        android:layout_centerHorizontal="true">

    </ProgressBar>

    <GridView
        android:id="@+id/gridViewID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/toolbarBottomID"
        android:layout_below="@id/viewID"
        android:layout_centerHorizontal="true"
        android:horizontalSpacing="2dp"
        android:numColumns="6"
        android:verticalSpacing="2dp">

    </GridView>


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarBottomID"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="#472cf5"
        android:textAlignment="center"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/toolbar_title_bottom_text_viewID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="3dp"
            android:drawableStart="@drawable/logo_small"
            android:gravity="start"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            android:text="@string/powered_by_star_soft_ltd"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </android.support.v7.widget.Toolbar>
</RelativeLayout>